<resources>
    <string name="app_name">HaveBeen</string>


    <string name="google_android_api_key">AIzaSyCImxWqeYiFAVRTt2UnWd7DqgN7kPhOhcI</string>

    <!--Api-Key-->
    <string name="default_google_web_client_id">66391131211-qg6pufm1h92am1085aipfl0fn40fruj3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1645429868901847</string>
    <string name="fb_login_protocol_scheme">fb1645429868901847</string>
    <string name="kakao_app_key">f10be103a6a67edafab70d929f5ed5ab</string>


    <string name="edit">편집</string>
    <string name="summit">확인</string>
    <string name="cancel">취소</string>
    <string name="search">검색</string>
    <string name="friend">친구</string>


    <!--회원가입 / 로그인-->
    <string name="login_default_id_hint">Username/E-mail</string>
    <string name="login_default_password_hint">password</string>
    <string name="login_default_submit_login_text">Login</string>
    <string name="login_default_submit_signup_text">Sign up</string>
    <string name="forget_password">Forget your password?</string>


    <!--방생성 (날짜)-->
    <string name="how_many_trip_day">여행기간은 얼마인가요?</string>
    <string name="please_input_start_stop">출발일과 도착일을 지정해주세요.</string>
    <string name="start_day">출발일</string>
    <string name="end_day">도착일</string>

    <!--방생성 (도시)-->
    <string name="where_city">어디로 여행갈까요?</string>
    <string name="please_input_city">여행갈 나라, 도시를 검색해주세요.</string>
    <string name="try_search_city">여행지를 검색하세요.</string>
    <string name="popular_city">인기도시</string>
    <string name="select_city">선택 여행지</string>

    <!--방생성 (비용)-->
    <string name="cost_fixed">여행 경비를 정하셨나요?</string>
    <string name="please_input_cost">여행의 전체예산을 적어주세요.</string>
    <string name="won">￦</string>
    <string name="cost_text">9박 10일 여행시 \n일일 평균 지출금액은</string>
    <string name="cost_result">원입니다.</string>
    <string name="cost_last_ment">Journey과 함께 여행계획을 세우며 꼼꼼한\n여행경비관리를 시작해볼까요?"</string>

    <!--방생성 (친구)-->
    <string name="friend_noti">동행하는 사람이 있나요?</string>
    <string name="please_select_friend">앱을 사용하는 동행자가 있다면 초대해주세요.</string>

    <!--방생성 다이어리-->
    <string name="final_fix">최종확인</string>
    <string name="test_schedul">2018년 9월 13일 화요일 - 9월 22일 목요일\n 9박 10일</string>
    <string name="test_user">김혜자님\n외 2명</string>
    <string name="test_money">총 여행예산\n600,000,000원</string>
    <string name="create_room">여행스토리 생성하기</string>


    <!--탭 제목-->
    <string name="tab_journey">Journey</string>
    <string name="tab_friend">Friends</string>
    <string name="tab_feed">My feed</string>
    <string name="tab_alarm">News</string>
    <string name="doing_story">여행중인 스토리</string>
    <string name="do_not_story">여행중인 스토리가 없습니다.</string>
    <string name="plan_story">계획중인 스토리</string>
    <string name="together_story">함께하는 스토리</string>
    <string name="new_alarm">새로운 알림</string>
    <string name="last_alarm">지난 알림</string>

    <string name="alarm_test_message">노현우님이 10년지기 칭구들 여행 스\n토리에 회원님을 초대했습니다</string>
    <string name="alarm_test_message2">박대수님이 2018가족여행의 계획 중 교통을\n최종선택하였습니다 다음 계획은 숙소입니다</string>

</resources>
