<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createRoomCostTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/nanum_bold"
        android:text="@string/cost_fixed"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/createRoomCostTv2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nanum"
        android:gravity="center_vertical"
        android:text="@string/please_input_cost"
        android:textColor="@color/pinkish_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomCostTv1" />

    <RelativeLayout
        android:id="@+id/createRoomCostContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/createRoomCostTv2">

        <EditText
            android:id="@+id/createRoomCostEditTextCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:focusable="true"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/createRoomCostDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/createRoomCostEditTextCost"
            android:layout_centerHorizontal="true"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/won"
            android:textColor="@color/search_city_name_color"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/createRoomCostContainer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="170dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/createRoomCostContainer2">

        <TextView
            android:id="@+id/createRoomCostDayNotiTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/createRoomCostDayCostTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createRoomCostDayNotiTv"
            android:text="60,000"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createRoomCostDayResultTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/createRoomCostDayCostTv"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/createRoomCostDayCostTv"
            android:text="@string/cost_result"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createRoomCostDayResultTv"
            android:layout_marginTop="16dp"
            android:text="@string/cost_last_ment"
            android:textColor="#9b9b9b"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>