<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createRoomPlaceTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/nanum_bold"
        android:text="@string/where_city"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/createRoomPlaceTv2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nanum"
        android:gravity="center_vertical"
        android:text="@string/please_input_city"
        android:textColor="@color/pinkish_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomPlaceTv1" />

    <FrameLayout
        android:id="@+id/createRoomPlaceCityEditTextContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_edittext_rounded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomPlaceTv2"
        app:layout_constraintWidth_percent="0.85">

        <EditText
            android:id="@+id/createRoomPlaceCityEditText"
            style="@style/SearchEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/try_search_city"
            android:paddingStart="10dp"
            android:textColor="@color/search_country_name_color"
            android:textSize="14sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/createRoomPlaceTv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:text="@string/select_city"
        android:textColor="#28abf1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomPlaceCityEditTextContainer" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/createRoomPlaceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomPlaceTv3" />


</android.support.constraint.ConstraintLayout>