<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/createRoomFriendSelectListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/createRoomFriendEditTextContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createRoomFriendTv1" />

    <TextView
        android:id="@+id/createRoomFriendTv1"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/nanum"
        android:gravity="center"
        android:text="@string/friend_noti"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/createRoomFriendTv2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nanum"
        android:gravity="center"
        android:text="@string/please_select_friend"
        android:textColor="@color/pinkish_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomFriendTv1" />

    <FrameLayout
        android:id="@+id/createRoomFriendEditTextContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_edittext_rounded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomFriendTv2"
        app:layout_constraintWidth_percent="0.85">

        <EditText
            android:id="@+id/createRoomFriendEditText"
            style="@style/SearchEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/search"
            android:paddingStart="10dp"
            android:textSize="14sp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/createRoomFriendListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomFriendEditTextContainer">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>